Final Changes and upload to github

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,281 @@
 
 <body>
 
+    <div class="main">
+        <section class="stage">
+            <div class="container stage__wrapper">
+                <div class="stage__text">
+                    <div class="stage__title">Product name</div>
+                    <ul class="stage__list">
+                        <li class="stage__list-item">Puton this page information</li>
+                        <li class="stage__list-item">Lorem ipsum dolor sit.</li>
+                        <li class="stage__list-item">Lorem ipsum dolor sit amet consectetur.</li>
+                        <li class="stage__list-item">Lorem ipsum dolor sit.</li>
+                        <li class="stage__list-item">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Voluptatem,
+                            culpa.</li>
+                    </ul>
+                </div>
+                <div class="stage__image"></div>
+            </div>
+        </section>
 
+        <section class="about">
+            <div class="container about__wraper">
+                <div class="about__text">
+                    <div class="about__title">About your product</div>
+                    <div class="about__descr">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, quod reprehenderit
+                            accusantium aspernatur quidem porro sed voluptas ad. Molestiae, amet.</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, quia. Architecto aliquid
+                            assumenda dolor odio blanditiis cupiditate adipisci, nostrum, quam atque delectus quia id
+                            illo!</p>
+                    </div>
+                </div>
+                <div class="about__image">
+
+                </div>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="features__title">Dignity and pluses product</div>
+            <div class="container features__wraper">
+                <div class="features__items">
+                    <div class="feature">
+                        <p class="features__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                            molestias vel, doloribus et numquam quos excepturi harum explicabo praesentium dicta dolore
+                            voluptatibus molestiae maxime magnam aliquam iure architecto ipsam amet, repellat ipsum!
+                            Deleniti eaque quaerat minus non odit quisquam porro.</p>
+                    </div>
+                    <div class="feature">
+                        <p class="features__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                            molestias vel, doloribus et numquam quos excepturi harum explicabo praesentium dicta dolore
+                            voluptatibus molestiae maxime magnam aliquam iure architecto ipsam amet, repellat ipsum!
+                            Deleniti eaque quaerat minus non odit quisquam porro.</p>
+                    </div>
+                    <div class="feature">
+                        <p class="features__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                            molestias vel, doloribus et numquam quos excepturi harum explicabo praesentium dicta dolore
+                            voluptatibus molestiae maxime magnam aliquam iure architecto ipsam amet, repellat ipsum!
+                            Deleniti eaque quaerat minus non odit quisquam porro.</p>
+                    </div>
+                    <div class="feature">
+                        <p class="features__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                            molestias vel, doloribus et numquam quos excepturi harum explicabo praesentium dicta dolore
+                            voluptatibus molestiae maxime magnam aliquam iure architecto ipsam amet, repellat ipsum!
+                            Deleniti eaque quaerat minus non odit quisquam porro.</p>
+                    </div>
+                    <div class="feature">
+                        <p class="features__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                            molestias vel, doloribus et numquam quos excepturi harum explicabo praesentium dicta dolore
+                            voluptatibus molestiae maxime magnam aliquam iure architecto ipsam amet, repellat ipsum!
+                            Deleniti eaque quaerat minus non odit quisquam porro.</p>
+                    </div>
+                    <div class="feature">
+                        <p class="features__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                            molestias vel, doloribus et numquam quos excepturi harum explicabo praesentium dicta dolore
+                            voluptatibus molestiae maxime magnam aliquam iure architecto ipsam amet, repellat ipsum!
+                            Deleniti eaque quaerat minus non odit quisquam porro.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="screenshots">
+            <h2 class="screenshots__title">Screenshots</h2>
+            <div class="cotainer screenshots__wraper">
+                <div class="screenshots__items">
+                    <div class="screenshot">
+                        <div class="screenshot__image"></div>
+                        <div class="screenshot__text">
+                            <h3 class="screenshot__title">The descriptions for images</h3>
+                            <p class="screenshot__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit
+                                sed
+                                aliquam fuga nulla velit explicabo voluptatum suscipit veritatis laboriosam asperiores?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="screenshot">
+                        <div class="screenshot__image"></div>
+                        <div class="screenshot__text">
+                            <h3 class="screenshot__title">The descriptions for images</h3>
+                            <p class="screenshot__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit
+                                sed
+                                aliquam fuga nulla velit explicabo voluptatum suscipit veritatis laboriosam asperiores?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="screenshot">
+                        <div class="screenshot__image"></div>
+                        <div class="screenshot__text">
+                            <h3 class="screenshot__title">The descriptions for images</h3>
+                            <p class="screenshot__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit
+                                sed
+                                aliquam fuga nulla velit explicabo voluptatum suscipit veritatis laboriosam asperiores?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="screenshot">
+                        <div class="screenshot__image"></div>
+                        <div class="screenshot__text">
+                            <h3 class="screenshot__title">The descriptions for images</h3>
+                            <p class="screenshot__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit
+                                sed
+                                aliquam fuga nulla velit explicabo voluptatum suscipit veritatis laboriosam asperiores?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="reviews">
+            <div class="container">
+                <h2 class="reviews__title">Reviews</h2>
+                <div class="reviews__items">
+                    <div class="review">
+                        <div class="review__image"></div>
+                        <div class="review__text">
+                            <div class="review__text-item">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Aut, voluptate!
+                            </div>
+                            <div class="review__text-author">Lourens.</div>
+                        </div>
+                    </div>
+                    <div class="review">
+                        <div class="review__image"></div>
+                        <div class="review__text">
+                            <div class="review__text-item">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Aut, voluptate!
+                            </div>
+                            <div class="review__text-author">Lourens.</div>
+                        </div>
+                    </div>
+                    <div class="review">
+                        <div class="review__image"></div>
+                        <div class="review__text">
+                            <div class="review__text-item">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Aut, voluptate!
+                            </div>
+                            <div class="review__text-author">Lourens.</div>
+                        </div>
+                    </div>
+                    <div class="review">
+                        <div class="review__image"></div>
+                        <div class="review__text">
+                            <div class="review__text-item">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Aut, voluptate!
+                            </div>
+                            <div class="review__text-author">Lourens.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="prices">
+            <div class="container prices__wraper">
+                <div class="prices__title">Buy it now!</div>
+                <div class="prices__items">
+                    <div class="price">
+                        <h3 class="price__title">Standart</h3>
+                        <div class="price__sum">100</div>
+                        <ol class="price__features">
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum amet.</li>
+                            <li class="price__features-item">Lorem ipsum elit. Sunt</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit.</li>
+                        </ol>
+                        <a href="#" class="price__btn">Buy</a>
+                    </div>
+
+                    <div class="price">
+                        <h3 class="price__title">Premium</h3>
+                        <div class="price__sum">150</div>
+                        <ol class="price__features">
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sunt</li>
+                            <li class="price__features-item">Lorem ipsum dolor dad sdfd dsfs asdasit.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit fsdfs .</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit sdf as.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                        </ol>
+                        <a href="#" class="price__btn">Buy</a>
+                    </div>
+
+                    <div class="price">
+                        <h3 class="price__title">Lux</h3>
+                        <div class="price__sum">200</div>
+                        <ol class="price__features">
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <li class="price__features-item">Lorem ipsum dolor sit.</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sunt</li>
+                            <li class="price__features-item">Lorem ipsum dolor sit amet.</li>
+                        </ol>
+                        <a href="#" class="price__btn">Buy</a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="footer__main">
+                <h2 class="footer__title">Contacts</h2>
+                <div class="footer__contacts">
+                    <form action="#" class="footer__contact-form">
+                        <input type="text" class="footer__input" placeholder="Your Name Here">
+                        <input type="email" class="footer__input" placeholder="Your Email Here">
+                        <textarea name="textarea" class="footer__textarea"
+                            placeholder="Enter your message here..."></textarea>
+                        <button type="submit" class="footer__submit">Send</button>
+
+                    </form>
+                    <div class="footer__contacts-items">
+                        <div class="footer__links">
+                            <a href="#" class="footer__link-item"><img src="assets/images/skype.png"
+                                    alt="skype"><span>Hereyour login
+                                    Skype</span></a>
+                            <a href="#" class="footer__link-item"><img src="assets/images/social-media.png"
+                                    alt="twitter"><span>Hereyour login
+                                    Twitter</span></a>
+
+                            <a href="#" class="footer__link-item"><img src="assets/images/telephone.png"
+                                    alt="phone"><span>+37369200528</span></a>
+
+                            <a href="#" class="footer__link-item"><img src="assets/images/mail.png"
+                                    alt="email"><span>email@email.com</span></a>
+                        </div>
+                        <div class="social">
+                            <a href="№" class="social__icon socmed-email"></a>
+                            <a href="№" class="social__icon socmed-facebook"></a>
+                            <a href="№" class="social__icon socmed-twitter"></a>
+                            <a href="№" class="social__icon socmed-youtube"></a>
+                            <a href="№" class="social__icon socmed-instagram"></a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <p class="footer__copyright-text">Copyright &copy; 2024 Product Name - Learn HTML CSS JS</p>
+            </div>
+        </footer>
+
+
+    </div>
 
 </body>
 
